environment/configuration/components/cluster-gateway/cluster-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
  annotations:
    io.cilium/l2-announcement: "true"
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.nickisibbern.dk"
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard-tls-secret
    allowedRoutes:
      namespaces:
        from: All
